--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./src/assets/image1.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./src/assets/image1.png"
+      type="image/x-icon"
+    />
     <title>Virtual Assistant</title>
   </head>
   <body>
